--- a/src/main/resources/com/mmn/circuitscourts/fxml/Client/Profil.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Client/Profil.fxml
@@ -24,12 +24,12 @@
                         <VBox alignment="CENTER" minHeight="220.0" prefHeight="200.0" prefWidth="100.0">
                             <children>
                                 <Label alignment="CENTER" minHeight="90.0" minWidth="90.0" styleClass="profil-img"/>
-                                <Label styleClass="profil-username" text="Username">
+                                <Label fx:id="labelUsername" styleClass="profil-username" text="Username">
                                     <VBox.margin>
                                         <Insets top="20.0"/>
                                     </VBox.margin>
                                 </Label>
-                                <Label styleClass="profil-grade" text="Grade">
+                                <Label fx:id="labelGrade" styleClass="profil-grade" text="Grade">
                                     <VBox.margin>
                                         <Insets top="5.0"/>
                                     </VBox.margin>
