--- a/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/Vehicules.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/Vehicules.fxml
@@ -80,7 +80,7 @@
                                 </VBox>
                             </children>
                         </HBox>
-                        <VBox fx:id="commandeTable" prefHeight="500" prefWidth="950" styleClass="commande-tableview">
+                        <VBox fx:id="contentTable" prefHeight="500" prefWidth="950" styleClass="commande-tableview">
                             <children>
                                 <HBox alignment="CENTER_LEFT" prefHeight="56" prefWidth="950"
                                       styleClass="commande-tableview-header">
