--- a/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/Commandes.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/Commandes.fxml
@@ -124,5 +124,52 @@
                 </VBox>
             </center>
         </BorderPane>
+        <VBox fx:id="confirmationDialog" visible="false" alignment="CENTER" prefHeight="200.0" prefWidth="100.0"
+              style="-fx-background-color: rgba(0,0,0,0.25);">
+            <children>
+                <VBox maxHeight="230.0" maxWidth="500.0" prefHeight="230.0" prefWidth="100.0"
+                      styleClass="confirm-dialog">
+                    <children>
+                        <VBox maxHeight="8.0" prefHeight="200.0" prefWidth="100.0"
+                              styleClass="confirm-dialog-topbar-red"/>
+                        <HBox VBox.vgrow="ALWAYS">
+                            <VBox.margin>
+                                <Insets bottom="20.0" left="30.0" right="20.0" top="20.0"/>
+                            </VBox.margin>
+                            <children>
+                                <Label prefHeight="100.0" prefWidth="200.0">
+                                    <graphic>
+                                        <Region styleClass="warning-img"/>
+                                    </graphic>
+                                </Label>
+                                <VBox prefWidth="500.0">
+                                    <children>
+                                        <Label prefWidth="460.0" styleClass="confirm-dialog-title"
+                                               text="Supprimer la commande ?"/>
+                                        <Label fx:id="descDialog"/>
+                                        <HBox alignment="CENTER" prefHeight="68.0" prefWidth="356.0" spacing="40.0">
+                                            <children>
+                                                <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0"
+                                                        styleClass="confirm-dialog-button-ok" text="Oui"
+                                                        fx:id="okButton"/>
+                                                <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0"
+                                                        styleClass="confirm-dialog-button-cancel" text="Annuler"
+                                                        fx:id="cancelButton"/>
+                                            </children>
+                                            <VBox.margin>
+                                                <Insets top="65.0"/>
+                                            </VBox.margin>
+                                        </HBox>
+                                    </children>
+                                    <HBox.margin>
+                                        <Insets left="30.0"/>
+                                    </HBox.margin>
+                                </VBox>
+                            </children>
+                        </HBox>
+                    </children>
+                </VBox>
+            </children>
+        </VBox>
     </children>
 </StackPane>
