--- a/src/main/resources/com/mmn/circuitscourts/fxml/Client/Sidebar.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Client/Sidebar.fxml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
 <?import javafx.geometry.Insets?>
-<BorderPane styleClass="sidebar" BorderPane.alignment="CENTER" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mmn.circuitscourts.controller.client.ClientSidebarController">
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.VBox?>
+
+<BorderPane styleClass="sidebar" BorderPane.alignment="CENTER" xmlns:fx="http://javafx.com/fxml/1"
+            xmlns="http://javafx.com/javafx/19"
+            fx:controller="com.mmn.circuitscourts.controller.client.ClientSidebarController">
     <top>
         <VBox alignment="CENTER" maxHeight="64.0" minWidth="248" prefHeight="64.0" prefWidth="248.0"
               styleClass="sidebar-title-container" BorderPane.alignment="CENTER">
@@ -14,15 +20,13 @@
         </VBox>
     </top>
     <bottom>
-        <HBox maxHeight="68.0" maxWidth="248.0" styleClass="sidebar-profil-container"
-              BorderPane.alignment="CENTER">
+        <HBox maxHeight="68.0" maxWidth="248.0" styleClass="sidebar-profil-container" BorderPane.alignment="CENTER">
             <children>
                 <VBox prefHeight="64.0" prefWidth="248">
                     <children>
-                        <Label maxHeight="19.0" maxWidth="160.0" prefHeight="19.0" prefWidth="160.0"
-                               fx:id="userName"
+                        <Label fx:id="userName" maxHeight="19.0" maxWidth="160.0" prefHeight="19.0" prefWidth="160.0"
                                styleClass="sidebar-profil-name"/>
-                        <Label styleClass="sidebar-profil-email" fx:id="userGrade"/>
+                        <Label fx:id="userGrade" styleClass="sidebar-profil-email"/>
                     </children>
                     <padding>
                         <Insets bottom="15.0" left="15.0" right="15.0" top="15.0"/>
@@ -30,13 +34,11 @@
                 </VBox>
                 <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                     <children>
-                        <VBox fx:id="disconnectContainer" alignment="CENTER" maxHeight="24.0"
-                              maxWidth="24.0" minHeight="24.0" minWidth="24.0"
-                              onMouseClicked="#onDisconnect"
+                        <VBox fx:id="disconnectContainer" alignment="CENTER" maxHeight="24.0" maxWidth="24.0"
+                              minHeight="24.0" minWidth="24.0" onMouseClicked="#onDisconnect"
                               styleClass="sidebar-profil-disconnect-button-container">
-                            <Button fx:id="disconnectButton" mnemonicParsing="false"
-                                    onMouseClicked="#onDisconnect" pickOnBounds="true"
-                                    styleClass="sidebar-profil-disconnect-button">
+                            <Button fx:id="disconnectButton" mnemonicParsing="false" onMouseClicked="#onDisconnect"
+                                    pickOnBounds="true" styleClass="sidebar-profil-disconnect-button">
                                 <graphic>
                                     <Region styleClass="icon"/>
                                 </graphic>
@@ -51,17 +53,16 @@
         <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="TOP_CENTER">
             <children>
                 <Button fx:id="dashboardTab" alignment="TOP_LEFT" maxHeight="40" maxWidth="216.0"
-                        prefHeight="40" prefWidth="216.0" styleClass="sidebar-tab"
-                        text=" Tableau de bord" pickOnBounds="true" onMouseClicked="#onDashboardButton">
+                        onMouseClicked="#onDashboardButton" pickOnBounds="true" prefHeight="40" prefWidth="216.0"
+                        styleClass="sidebar-tab" text=" Tableau de bord">
                     <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
                     </padding>
                     <graphic>
-                        <Region styleClass="sidebar-tab-img-dashboard" />
+                        <Region styleClass="sidebar-tab-img-dashboard"/>
                     </graphic>
                 </Button>
-                <Label maxWidth="216.0" prefWidth="216.0" styleClass="sidebar-tab-subtitle"
-                       text="Gestion de compte">
+                <Label maxWidth="216.0" prefWidth="216.0" styleClass="sidebar-tab-subtitle" text="Gestion de compte">
                     <padding>
                         <Insets bottom="7.0" left="10.0" right="10.0" top="7.0"/>
                     </padding>
@@ -69,15 +70,17 @@
                         <Insets bottom="5" top="5"/>
                     </VBox.margin>
                 </Label>
-                <Button fx:id="profilTab" maxWidth="216" prefWidth="216" styleClass="sidebar-tab" alignment="TOP_LEFT" text=" Profil" onMouseClicked="#onProfilButton" pickOnBounds="true">
+                <Button fx:id="profilTab" alignment="TOP_LEFT" maxWidth="216" onMouseClicked="#onProfilButton"
+                        pickOnBounds="true" prefWidth="216" styleClass="sidebar-tab" text=" Profil">
                     <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
                     </padding>
                     <graphic>
-                        <Region styleClass="sidebar-tab-img-profil" />
+                        <Region styleClass="sidebar-tab-img-profil"/>
                     </graphic>
                 </Button>
-                <Button fx:id="commandesTab" maxWidth="216" prefWidth="216" styleClass="sidebar-tab" alignment="TOP_LEFT" text=" Mes commandes" onMouseClicked="#onCommandesButton" pickOnBounds="true">
+                <Button fx:id="commandesTab" alignment="TOP_LEFT" maxWidth="216" onMouseClicked="#onCommandesButton"
+                        pickOnBounds="true" prefWidth="216" styleClass="sidebar-tab" text=" Mes commandes">
                     <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
                     </padding>
@@ -85,16 +88,7 @@
                         <Region styleClass="sidebar-tab-img-commande"/>
                     </graphic>
                 </Button>
-                <Button fx:id="adressesTab" maxWidth="216" prefWidth="216" styleClass="sidebar-tab" alignment="TOP_LEFT" text=" Mes adresses" onMouseClicked="#onAdressesButton" pickOnBounds="true">
-                    <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
-                    </padding>
-                    <graphic>
-                        <Region styleClass="sidebar-tab-img-adresses" />
-                    </graphic>
-                </Button>
-                <Label maxWidth="216.0" prefWidth="216.0" styleClass="sidebar-tab-subtitle"
-                       text="Achats">
+                <Label maxWidth="216.0" prefWidth="216.0" styleClass="sidebar-tab-subtitle" text="Achats">
                     <padding>
                         <Insets bottom="7.0" left="10.0" right="10.0" top="7.0"/>
                     </padding>
@@ -102,16 +96,16 @@
                         <Insets bottom="5" top="5"/>
                     </VBox.margin>
                 </Label>
-                <Button fx:id="marketplaceTab" maxWidth="216" prefWidth="216" styleClass="sidebar-tab" alignment="TOP_LEFT" text=" Marketplace" onMouseClicked="#onMarketplaceButton" pickOnBounds="true">
+                <Button fx:id="marketplaceTab" alignment="TOP_LEFT" maxWidth="216" onMouseClicked="#onMarketplaceButton"
+                        pickOnBounds="true" prefWidth="216" styleClass="sidebar-tab" text=" Marketplace">
                     <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
                     </padding>
                     <graphic>
-                        <Region styleClass="sidebar-tab-img-marketplace" />
+                        <Region styleClass="sidebar-tab-img-marketplace"/>
                     </graphic>
                 </Button>
-                <Label maxWidth="216.0" prefWidth="216.0" styleClass="sidebar-tab-subtitle"
-                       text="Support">
+                <Label maxWidth="216.0" prefWidth="216.0" styleClass="sidebar-tab-subtitle" text="Support">
                     <padding>
                         <Insets bottom="7.0" left="10.0" right="10.0" top="7.0"/>
                     </padding>
@@ -119,12 +113,13 @@
                         <Insets bottom="5" top="5"/>
                     </VBox.margin>
                 </Label>
-                <Button fx:id="ticketTab" maxWidth="216" prefWidth="216" styleClass="sidebar-tab" alignment="TOP_LEFT" text=" Ouvrir un ticket" onMouseClicked="#onTicketButton" pickOnBounds="true">
+                <Button fx:id="ticketTab" alignment="TOP_LEFT" maxWidth="216" onMouseClicked="#onTicketButton"
+                        pickOnBounds="true" prefWidth="216" styleClass="sidebar-tab" text=" Ouvrir un ticket">
                     <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
                     </padding>
                     <graphic>
-                        <Region styleClass="sidebar-tab-img-ticket" />
+                        <Region styleClass="sidebar-tab-img-ticket"/>
                     </graphic>
                 </Button>
             </children>
