--- a/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/AddArticles.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Producteur/AddArticles.fxml
@@ -113,7 +113,7 @@
                         </HBox>
                         <VBox alignment="CENTER" prefHeight="200" prefWidth="100">
                             <children>
-                                <Button mnemonicParsing="false" onMouseClicked="#onCreate" styleClass="addCommandeButton" text="Ajouter l'article" />
+                                <Button mnemonicParsing="false" onMouseClicked="#onCreate" prefHeight="40.0" prefWidth="150.0" styleClass="addCommandeButton" text="Ajouter l'article" />
                             </children>
                         </VBox>
                     </children>
@@ -133,7 +133,7 @@
                   <HBox alignment="CENTER_LEFT" spacing="220.0">
                      <children>
                         <Label styleClass="main-title" text="Ajout de categorie" />
-                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" styleClass="errorPopup-close" onMouseClicked="#onCloseCategorie">
+                        <Button mnemonicParsing="false" onMouseClicked="#onCloseCategorie" prefHeight="30.0" prefWidth="30.0" styleClass="errorPopup-close">
                            <graphic>
                               <Region prefHeight="200.0" prefWidth="200.0" styleClass="errorPopup-close-img" />
                            </graphic>
